# portfolio

./: .env.template  .gitignore  Cargo.toml  README.md  flake.nix  index.html  readme.md  run-test-vm.sh  style.css
.github/workflows/: bootstrap.yaml  update.yaml
.sass-cache/a6b74fff7703174762547ed31a94b4fc24f4010e/: main.scssc
app/: Cargo.toml
app/src/: lib.rs
app/src/pages/: admin.rs  login.rs  public.rs
app/src/pages/admin/: overview.rs
app/src/pages/public/: about.rs  contact.rs  home.rs
app/src/static/: header.rs
assets/css/: about.css  style.css
deployment/: .env.template  .gitignore  flake.nix
deployment/modules/: flake-parts.nix
deployment/modules/hosts/bootstrap/: configuration.nix
deployment/modules/hosts/production/: configuration.nix
deployment/modules/nixosModules/: app-user.nix  common.nix  ssh-root.nix
deployment/modules/nixosModules/setup/: disk-config.nix
deployment/secrets/: .env.age  keys.nix
frontend/: Cargo.toml
frontend/src/: lib.rs
modules/: devshell.nix  flake-parts.nix  module.nix  package.nix  test-vm.nix
modules/hosts/bootstrap/: configuration.nix
modules/hosts/production/: configuration.nix
modules/nixosModules/: app-user.nix  bootstrap-specific.nix  common.nix  production-specific.nix  secrets.nix
modules/nixosModules/setup/: bootstrap.nix
public/: portrait.avif
secrets/: .env.age  keys.nix  secrets.nix
server/: Cargo.toml
server/src/: auth.rs  error.rs  main.rs  state.rs
server/src/auth/: cookie.rs  error.rs  jwt.rs  oidc.rs  refresh.rs
server/src/middleware/: jwt.rs
src/: auth.rs  lib.rs  main.rs  state.rs  view.rs
src/view/: pages.rs
src/view/pages/: admin.rs  login.rs  public.rs
src/view/pages/public/: portfolio.rs
src/view/static/: footer.rs  header.rs
style/: main.scss
