[workspace]
resolver = "2"
members = ["app", "frontend", "server"]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
leptos = { version = "0.8.0", features = ["nightly"] }
leptos_router = { version = "0.8.0", features = ["nightly"] }
leptos_meta = { version = "0.8.0" }
leptos_axum = { version = "0.8.0" }
leptos-use = { version = "0.18.3" }
axum = { version = "0.8.0" }
axum-extra = { version = "0.12.5", features = ["cookie"] }
console_error_panic_hook = { version = "0.1" }
tokio = { version = "1", features = ["rt-multi-thread"] }
wasm-bindgen = { version = "0.2.106" }
openidconnect = { version = "4.0.1", features = ["reqwest"] }
serde = { version = "1.0.228" }
dotenvy = { version = "0.15.7" }
tower-sessions = { version = "0.15.0" }
thiserror = { version = "2.0.18" }
jsonwebtoken = { version = "10.3.0" }

[[workspace.metadata.leptos]]
name = "portfolio"
bin-package = "server"
lib-package = "frontend"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
lib-profile-release = "wasm-release"
