[package]
name = "app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
leptos-use = { workspace = true }

# SSR-only deps, gated by feature
leptos_axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
openidconnect = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
tower-sessions = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
hydrate = [
    "leptos/hydrate",
]
ssr = [
    "dep:leptos_axum",
    "dep:axum",
    "dep:axum-extra",
    "dep:openidconnect",
    "dep:serde",
    "dep:dotenvy",
    "dep:tower-sessions",
    "dep:tokio",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-use/axum",
]