[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../app", features = ["ssr"] }
leptos = { workspace = true }
leptos_axum = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
tower-sessions = { workspace = true }
leptos-use = { workspace = true }
serde = { workspace = true }
openidconnect = { workspace = true }